--- a/index.html
+++ b/index.html
@@ -5,6 +5,43 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Prof Ajax</h1>
+    <header>
+    <img src="img/Imagem1.png" width="950"> 
+</header>
+<nav>
+
+    <a href="index.html">Home</a>#
+    <a href="musicas.html">Músicas para programação</a>#
+    <a href="aulas.html">Aulas</a> #
+    <a href="contato.html">Contato</a>
+</nav>
+<main>
+<h1>Aulas particulares de programção</h1>
+
+<figure>
+<img src="img/pylogo1.png" width="250"><br>
+<figcaption>Linguagem Python</figcaption>
+</figure><br>
+<hr>
+<figure>
+
+    <img src="img/C-SHARP-PROPRIEDADES-INIT-RECORD.png" width="250"><br>
+    <figcaption>Linguagem C#</figcaption>
+</figure><br>
+<hr>
+<figure>
+    <img src="img/e2d2f80e-java-logo.png" width="250" ><br>
+    <figcaption>Linguagem Java</figcaption>
+</figure><br>
+<hr>
+<figure>
+    <img src="img/R_logo.svg.png" width="250"><br>
+    <figcaption>Linguagem R</figcaption>
+</figure><br>
+
+</main>
+<footer>Prof Ajax 2022</footer>
+
+
 </body>
 </html>
