--- a/aulas.html
+++ b/aulas.html
@@ -10,12 +10,14 @@
 </header>
 <nav>
 
-    <a href="index.html">Home</a>#
-    <a href="musicas.html">Músicas para programção</a>#
-    <a href="aulas.html">Aulas</a> #
-    <a href="contato.html">Contato</a>
+    <button> <a href="index.html">Home</a></button> 
+    <button> <a href="musicas.html">Músicas para programação</a></button>
+    <button> <a href="aulas.html">Aulas</a> </button>
+    <button> <a href="contato.html">Contato</a></button>
 </nav>
 <main>
+    <br>
+    <hr>
     <iframe width="683" height="384" src="https://www.youtube.com/embed/4RMw32QMDFE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <br>
     <h4>Tutorial alo mundo Python</h4>
