--- a/contato.html
+++ b/contato.html
@@ -10,13 +10,34 @@
 </header>
 <nav>
 
-    <a href="index.html">Home</a>#
-    <a href="musicas.html">Músicas para programção</a>#
-    <a href="aulas.html">Aulas</a> #
-    <a href="contato.html">Contato</a>
+    <button> <a href="index.html">Home</a></button> 
+    <button> <a href="musicas.html">Músicas para programação</a></button>
+    <button> <a href="aulas.html">Aulas</a> </button>
+    <button> <a href="contato.html">Contato</a></button>
 </nav>
 <main>
-
+<form>
+    <br>
+    <hr>
+    <strong>Nome</strong>
+    <input type="text" name="nome" required><br>
+    <strong>Email</strong>
+    <input type="email" name="email" required><br>
+    <strong>Linguagens</strong><br>
+    <input type="checkbox" value="11" name="ling">python
+    <br>
+    <input type="checkbox" value="12" name="ling">java
+    <br>
+    <input type="checkbox" value="13" name="ling">c#
+    <br>
+    <input type="checkbox" value="14" name="ling">R
+    <br>
+    Mensagem:<br>
+    <textarea rows="5" cols="50"></textarea>
+    <button>Enviar</button>
+    
+<hr>
+</form>
 
 </main>
 <footer>Prof Ajax 2022</footer>
