--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 </header>
 <nav>
 
-    <a href="index.html">Home</a>#
-    <a href="musicas.html">Músicas para programação</a>#
-    <a href="aulas.html">Aulas</a> #
-    <a href="contato.html">Contato</a>
+   <button> <a href="index.html">Home</a></button> 
+   <button> <a href="musicas.html">Músicas para programação</a></button>
+   <button> <a href="aulas.html">Aulas</a> </button>
+   <button> <a href="contato.html">Contato</a></button>
 </nav>
 <main>
-<h1>Aulas particulares de programção</h1>
+<h1>Aulas particulares de programação</h1>
+<hr>
 
 <figure>
 <img src="img/pylogo1.png" width="250"><br>
@@ -38,7 +39,7 @@
     <img src="img/R_logo.svg.png" width="250"><br>
     <figcaption>Linguagem R</figcaption>
 </figure><br>
-
+<hr>
 </main>
 <footer>Prof Ajax 2022</footer>
 
