--- a/musicas.html
+++ b/musicas.html
@@ -10,10 +10,10 @@
 </header>
 <nav>
 
-    <a href="index.html">Home</a>#
-    <a href="musicas.html">Músicas para programção</a>#
-    <a href="aulas.html">Aulas</a> #
-    <a href="contato.html">Contato</a>
+    <button> <a href="index.html">Home</a></button> 
+    <button> <a href="musicas.html">Músicas para programação</a></button>
+    <button> <a href="aulas.html">Aulas</a> </button>
+    <button> <a href="contato.html">Contato</a></button>
 </nav>
 <main>
 <h1>Musicas para programação</h1>
